# pdf-rasterizer

./: LICENSE  README.md  main.py  main.spec  pyproject.toml  requirements.txt
app/: __init__.py  core.py  ui.py
